# weeve-modules-python-package

./: .editorconfig  .gitignore  MANIFEST.in  README.md  pyproject.toml
src/weeve_modules/: __init__.py  add_graceful_termination.py  connect.py  connect_callback_function.py  listener.py  listener_callback_function.py  logger.py  processing_thread.py  request_handler.py  send.py  version.py
test/: README.md  docker-compose.test.yml  test_package.py
test/assets/: input_data.json  input_module_expected_output.json  output_expected_output.json  processing_1_module_expected_output.json  processing_2_module_expected_output.json
test/input_module/: .env  Dockerfile  input_module.py
test/output_module/: Dockerfile  output_module.py
test/processing_1_module/: Dockerfile  processing_1_module.py
test/processing_2_module/: Dockerfile  processing_2_module.py
tests/: .env  docker-entrypoint.sh  test_1.py
tests/input_module/: Dockerfile  input_module.py
tests/old/: Dockerfile  initialtest_1.py
